# hypercoin

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  SECURITY.md  autogen.sh  cmake_log.txt  configure.ac  configure~  libhypercoinconsensus.pc.in  libhypercoinkernel.pc.in  vcpkg.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  ci-test-each-commit-exec.py  ci-windows-cross.py  ci-windows.py
.tx/: config
ci/: lint.py  lint_imagefile  test_imagefile  test_run_all.sh
cmake/: ccache.cmake  crc32c.cmake  hypercoin-build-config.h.in  introspection.cmake  leveldb.cmake  libmultiprocess.cmake  minisketch.cmake  secp256k1.cmake  windows-app.manifest.in
contrib/: README.md  filter-lcov.py  gitian-build.sh  hypercoin-cli.bash-completion  hypercoin-qt.pro  hypercoin-tx.bash-completion  hypercoind.bash-completion  install_db4.sh  tidy_datadir.sh  valgrind.supp
depends/: Makefile  README.md  description.md  packages.md  toolchain.cmake.in
doc/: CMakeLists.txt  Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_osx.md  README_windows.txt  REST-interface.md  asmap-data.md  assets-attribution.md  assumeutxo.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-osx.md  (+35 more)
src/ipc/test/: CMakeLists.txt  ipc_test.capnp  ipc_test.cpp  ipc_test.h  ipc_test_types.h  ipc_tests.cpp
src/qt/test/: CMakeLists.txt  addressbooktests.cpp  addressbooktests.h  apptests.cpp  apptests.h  compattests.cpp  compattests.h  optiontests.cpp  optiontests.h  paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  rpcnestedtests.cpp  rpcnestedtests.h  test_main.cpp  uritests.cpp  uritests.h  util.cpp  util.h  wallettests.cpp  wallettests.h
(+2235 files in other folders)
